--- a/gamcoach-ui/src/components/feature-card/FeatureCard.scss
+++ b/gamcoach-ui/src/components/feature-card/FeatureCard.scss
@@ -18,7 +18,8 @@ $card-h-padding: 16px;
   position: relative;
   border: 1px solid $gray-300;
 
-  will-change: box-shadow;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
   transition: box-shadow 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
 
   &.collapsed {
@@ -211,7 +212,8 @@ $card-h-padding: 16px;
     cursor: default;
     color: white;
 
-    will-change: transform;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
     transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     transform-origin: bottom center;
     transform: scale(0);
@@ -248,7 +250,8 @@ $card-h-padding: 16px;
     align-items: center;
     opacity: 0;
     transform: scale(1);
-    will-change: transform;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
     transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
     .svg-icon {
@@ -277,7 +280,8 @@ $card-h-padding: 16px;
       align-items: center;
       cursor: pointer;
       border: 1px solid $gray-200;
-      will-change: opacity;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translateZ(0);
       transition: opacity 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 
       .icon {
@@ -384,7 +388,8 @@ $card-h-padding: 16px;
       top: 50%;
       margin-top: -($base-circle-radius / 2);
       margin-left: -($base-circle-radius / 2);
-      will-change: transform;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translateZ(0);
       transform: scale(0.1);
       transition: transform 300ms ease-in-out;
     }
@@ -460,7 +465,8 @@ $card-h-padding: 16px;
   background-color: $gray-500;
   color: white;
 
-  will-change: transform;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
   transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   transform-origin: top center;
   transform: translateX(-50%) translateY(100%) scale(0);
@@ -518,7 +524,8 @@ $card-h-padding: 16px;
 
   :global(.tick line) {
     stroke: $orange-100;
-    will-change: transform;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
     transform: scaleY(1.8);
     transition: transform 300ms ease-in-out;
   }
@@ -677,7 +684,8 @@ $card-h-padding: 16px;
   width: 220px;
   text-align: center;
 
-  will-change: transform;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
   transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   transform-origin: bottom center;
   transform: translateX(-50%) translateY(-15px) scale(0);
